# ResearchHub-Ethiopia

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.ollama.yml  docker-compose.yml  main.py  pyproject.toml
.github/: dependabot.yml
backend/: Dockerfile  alembic.ini
docker/: grafana-datasources.yml  nginx.conf  prometheus.yml
docs/: AI_RESEARCH_INTELLIGENCE.md  ARCHITECTURE.md  AUTHENTICATION.md  BACKUP_AND_RECOVERY.md  CONNECTORS.md  HARVESTING.md  METADATA_QUALITY.md  OLLAMA_CONTEXT_MANAGEMENT.md  SEMANTIC_SEARCH.md  SOURCE_MANAGEMENT.md  advanced-ui-features.md  advanced-ui-upgrade-plan.md  authorization-matrix.md  database-schema-audit.md  enterprise-prototype-audit.md  enterprise-prototype-known-limitations.md  enterprise-prototype-release-checklist.md  full-text-summary-and-semantic-search-audit.md  search-evaluation.md  semantic-search-evaluation.md  showcase-script.md
frontend/: .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
load-tests/: README.md  config.py  locustfile.py  requirements.txt
researchhub_ethiopia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: __init__.py  backup_database.py  backup_documents.py  benchmark_context_budget.py  check_claimed_features.py  create_admin_user.py  download_ollama_model.py  evaluate_search.py  generate_publication_embeddings.py  import_aau_json.py  import_universities_json.py  index_downloaded_documents.py  link_research_documents.py  main.py  restore_database.py  seed_enterprise_demo.py  verify_backup.py  verify_enterprise_demo.py  verify_intelligence_workflow.py
tests/: test_aau_import.py  test_ai_foundation.py  test_auth_security.py  test_context_management.py  test_coordination.py  test_dspace_discovery_connector.py  test_full_text_summary_workflow.py  test_harvest_persistence.py  test_harvesting_engine.py  test_import_operations.py  test_metadata_quality.py  test_normalization.py  test_oai_pmh_parser.py  test_permission_vocabulary.py  test_research_chatbot.py  test_research_documents_api.py  test_research_intelligence.py  (+3 more)
(+199 files in other folders)
