[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchhub-ethiopia"
version = "0.1.0"
description = "AI-powered research information management platform for Ethiopian universities."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "psycopg[binary]>=3.2",
  "alembic>=1.14",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "redis>=5.2",
  "celery>=5.4",
  "apscheduler>=3.10",
  "httpx>=0.28",
  "requests>=2.31,<3",
  "python-dateutil>=2.9",
  "python-multipart>=0.0.20",
  "PyJWT>=2.10",
  "pwdlib[argon2]>=0.3",
  "structlog>=24.4",
  "orjson>=3.10",
  "pgvector>=0.3,<1",
  "beautifulsoup4>=4.12,<5",
  "pymupdf>=1.24",
  "python-docx>=1.1",
  "sentence-transformers>=3.3",
]

[project.optional-dependencies]
ai = [
  "sentence-transformers>=3.3",
  "numpy>=1.26",
  "torch>=2.1",
  "langchain>=0.3",
  "pymupdf>=1.24",
  "python-docx>=1.1",
  "tiktoken>=0.8",
]
test = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13",
  "build>=1.2",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
]

[tool.setuptools.packages.find]
where = ["backend", "harvester", "ai", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend", "harvester", "ai", "scripts"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# FastAPI intentionally evaluates dependency marker factories in defaults.
# Generic[T] remains supported and is retained for current mypy compatibility.
ignore = ["E501", "B008", "UP046"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["fitz", "fitz.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "apscheduler",
  "apscheduler.*",
  "celery",
  "celery.*",
]
ignore_missing_imports = true
